# pdf-translator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  Spec.md  create_sample_pdf.py  create_sample_pdf_with_font.py  development-schedule.md  main.py  pyproject.toml  run-uv.sh  test_integration.py  test_japanese_extraction.py  test_ocr_basic.py  test_ocr_demo.py  test_ocr_simple.py  test_pdf_extractor_demo.py  test_post_processor_demo.py  test_render_output.html  test_renderer_demo.py  test_renderer_simple.py  test_setup.py  test_simple_pipeline.py  test_term_miner_demo.py  test_translator_demo.py  開発スケジュール.md
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: config.yml
note/: 02-week2-pdf-extractor.md  03-week6-layout-analyzer.md  progress-summary.md
notes/: 00-progress-summary.md  01-environment-setup.md  07-week7-ocr-renderer.md  08-week7-main-pipeline-integration.md
pdf_translator/: __init__.py
pdf_translator/config/: manager.py
pdf_translator/core/: __init__.py  pipeline.py
pdf_translator/extractor/: ocr_extractor.py  pdf_extractor.py
pdf_translator/layout_analyzer/: __init__.py  layout_analyzer.py
pdf_translator/models/: __init__.py  document.py  layout.py  page.py
pdf_translator/post_processor/: __init__.py  post_processor.py
pdf_translator/renderer/: __init__.py  renderer.py
pdf_translator/term_miner/: __init__.py  (+1 more)
tests/: conftest.py  test_config.yml  test_extractor.py  test_integration_e2e.py  test_layout_analyzer.py  test_ocr_extractor.py  test_pipeline.py  test_post_processor.py  test_renderer.py  test_term_miner.py  test_translator.py
(+17 files in other folders)
